--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="https://www.paypal.com/sdk/js?client-id=AQWIDtlMclrR7Ke4CBgssWf-NqukUdf7mQZNIZcsAuG--hDNFrVWnVvVxkkTkI8PddxYtRe08ZWf37Eo"></script>
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
@@ -20,3 +21,9 @@
     <div id="root"></div>
   </body>
 </html>
+
+<!-- Live -->
+<!-- ARbHBT9RrAMmzBBQPF_gJMY-3R1P49KdUqITe5GJKMFOfBweagCGxFq8oDgdufOkMUgzQKwkCFG1VRN6 -->
+
+<!-- Dummy -->
+<!-- AQWIDtlMclrR7Ke4CBgssWf-NqukUdf7mQZNIZcsAuG--hDNFrVWnVvVxkkTkI8PddxYtRe08ZWf37Eo -->
